tests/syntax/invalid/all-cap-variable.ama
# <input>:1:1 variable name (HTTP) may not have consecutive uppercase letters
HTTP
